[gd_scene load_steps=2 format=3 uid="uid://doxrtiiepr5i4"]

[ext_resource type="Script" path="res://player.gd" id="1_v1pdg"]

[node name="Player" type="HBoxContainer" groups=["players"]]
custom_minimum_size = Vector2(216, 136)
layout_direction = 2
offset_right = 216.0
offset_bottom = 136.0
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1_v1pdg")

[node name="CardStacks" type="Control" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HitButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Hit"

[node name="StandButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Stand"

[node name="SplitButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 2
text = "Split"

[node name="DoubleButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "Double"

[connection signal="pressed" from="Buttons/HitButton" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="Buttons/StandButton" to="." method="_on_stand_button_pressed"]
[connection signal="pressed" from="Buttons/SplitButton" to="." method="_on_split_button_pressed"]
[connection signal="pressed" from="Buttons/DoubleButton" to="." method="_on_double_button_pressed"]
